--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <div class="left">
                 <img src="img/icon/maps.png" alt="">
                 <h3>A casa tua</h3>
-                Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel suo
-                studio
+                <span>Scegli il tuo maestro preferito e prenota la prima lezione a casa tua, a casa del maestro o nel
+                    suo
+                    studio</span>
             </div>
             <div class="right">
                 <img src="img/icon/screen.png" alt="">
